prevented horizontal scrolling

--- a/styles/main.css
+++ b/styles/main.css
@@ -273,3 +273,8 @@ p{
 html { 
     scroll-behavior: smooth; 
 }
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
